# GameOfLife_SDL2

./: CMakeLists.txt  elements.cpp  elements.h  field.cpp  field.h  gol.cpp  gol.h  main.cpp
